🐛 Watch changed from FS to Chokidar.

--- a/test/test.html
+++ b/test/test.html
@@ -3,7 +3,7 @@
     <export>
       <function name=message msg>
         <print>
-         Bonjour {msg}
+         Bonjoure {msg}
         </print>
       </function>
     </export>
