🔨 CLI Objective code updated.

--- a/test/sum.html
+++ b/test/sum.html
@@ -1,5 +1,4 @@
 <objective>
-    <print>
-        test
-    </print>
+    <import src=test as=core></import>
+    <test::test></test::test>
 </objective>
