--- a/test/test.html
+++ b/test/test.html
@@ -1,5 +1,9 @@
 <objective>
-    <print>
-        test
-    </print>
+    <export>
+        <function name=test>
+            <print>
+                coucou
+            </print>
+        </function>
+    </export>
 </objective>
