✨ Code updated with main source.

--- a/test/core.html
+++ b/test/core.html
@@ -5,5 +5,15 @@
                 {console.log(message)}
             </return>
         </function>
+        <function name=split text word>
+            <return>
+                {text.split(word)}
+            </return>
+        </function>
+        <function name=join text>
+            <return>
+                {text.join('')}
+            </return>
+        </function>
     </export>
 </objective>
