--- a/test/main.html
+++ b/test/main.html
@@ -1,6 +1,13 @@
 <objective>
     <import src=core></import>
     <print>
-        coucou
+        Hello world!
+    </print>
+    <print>
+        <join>
+            <split arg="hello" arg="e">
+            
+            </split>
+        </join>
     </print>
 </objective>
